--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,27 @@
         <artifactId>commons-beanutils</artifactId>
         <version>1.9.4</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+        <version>2.3.7.RELEASE</version>
+
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>5.3.12</version>
+    </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.49</version>
+    </dependency>
+    <dependency>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-core</artifactId>
+        <version>4.2.2</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
